--- a/.env
+++ b/.env
@@ -47,14 +47,17 @@ REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
-MAIL_MAILER=log
-MAIL_SCHEME=null
-MAIL_HOST=127.0.0.1
-MAIL_PORT=2525
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
-MAIL_FROM_ADDRESS="hello@example.com"
-MAIL_FROM_NAME="${APP_NAME}"
+
+MAIL_MAILER=smtp
+MAIL_HOST=smtp-relay.brevo.com
+MAIL_PORT=587
+MAIL_USERNAME=8e35b6002@smtp-brevo.com
+MAIL_PASSWORD=HhpPja0S7EZgBnXC
+MAIL_ENCRYPTION=tls
+MAIL_FROM_ADDRESS=www.dhdouh@gmail.com
+MAIL_FROM_NAME="BetConsulting"
+
+
 
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
