--- a/.hintrc
+++ b/.hintrc
@@ -4,7 +4,13 @@
   ],
   "hints": {
     "no-inline-styles": "off",
-    "compat-api/css": "off"
+    "compat-api/css": "off",
+    "axe/name-role-value": [
+      "default",
+      {
+        "button-name": "off"
+      }
+    ]
   },
   "browserslist": [
     "defaults",
