--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     },
     "devDependencies": {
         "@eslint/js": "^9.19.0",
+        "@types/file-saver": "^2.0.7",
         "@types/google.maps": "^3.58.1",
         "@types/node": "^22.13.5",
         "eslint": "^9.17.0",
@@ -50,7 +51,9 @@
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
         "concurrently": "^9.0.1",
+        "file-saver": "^2.0.5",
         "globals": "^15.14.0",
+        "jszip": "^3.10.1",
         "laravel-vite-plugin": "^2.0",
         "leaflet": "^1.9.4",
         "lucide-react": "^0.475.0",
