--- a/package.json
+++ b/package.json
@@ -8,13 +8,16 @@
         "format": "prettier --write resources/",
         "format:check": "prettier --check resources/",
         "lint": "eslint . --fix",
-        "types": "tsc --noEmit"
+        "types": "tsc --noEmit",
+        "tailwind:init": "tailwindcss init -p"
     },
     "devDependencies": {
         "@eslint/js": "^9.19.0",
         "@types/google.maps": "^3.58.1",
         "@types/leaflet": "^1.9.20",
-        "@types/node": "^22.13.5",
+        "@types/node": "^22.18.0",
+        "@types/react": "^19.1.11",
+        "autoprefixer": "^10.4.21",
         "eslint": "^9.17.0",
         "eslint-config-prettier": "^10.0.1",
         "eslint-plugin-react": "^7.37.3",
@@ -22,6 +25,8 @@
         "prettier": "^3.4.2",
         "prettier-plugin-organize-imports": "^4.1.0",
         "prettier-plugin-tailwindcss": "^0.6.11",
+        "tailwindcss": "^4.1.12",
+        "typescript": "^5.8.3",
         "typescript-eslint": "^8.23.0"
     },
     "dependencies": {
@@ -43,8 +48,7 @@
         "@radix-ui/react-toggle": "^1.1.2",
         "@radix-ui/react-toggle-group": "^1.1.2",
         "@radix-ui/react-tooltip": "^1.1.8",
-        "@tailwindcss/vite": "^4.1.11",
-        "@types/react": "^19.0.3",
+        "@tailwindcss/vite": "^4.1.12",
         "@types/react-dom": "^19.0.2",
         "@vitejs/plugin-react": "^4.6.0",
         "axios": "^1.11.0",
@@ -61,10 +65,9 @@
         "recharts": "^2.15.4",
         "sonner": "^2.0.7",
         "tailwind-merge": "^3.0.1",
-        "tailwindcss": "^4.0.0",
         "tailwindcss-animate": "^1.0.7",
-        "typescript": "^5.7.2",
-        "vite": "^7.0.4"
+        "vite": "^7.0.4",
+        "ziggy-js": "^2.5.3"
     },
     "optionalDependencies": {
         "@rollup/rollup-linux-x64-gnu": "4.9.5",
