--- a/.env
+++ b/.env
@@ -33,7 +33,8 @@ SESSION_ENCRYPT=false
 SESSION_PATH=/
 SESSION_DOMAIN=null
 
-BROADCAST_CONNECTION=log
+BROADCAST_CONNECTION=reverb
+BROADCAST_DRIVER=reverb
 FILESYSTEM_DISK=local
 QUEUE_CONNECTION=database
 
@@ -63,3 +64,16 @@ AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
 VITE_APP_NAME="${APP_NAME}"
+
+
+REVERB_APP_ID=863783
+REVERB_APP_KEY=wr8lp6fysl2wuzek5w5m
+REVERB_APP_SECRET=ix7ugwriot0hzhot6q7a
+REVERB_HOST="localhost"
+REVERB_PORT=8080
+REVERB_SCHEME=http
+
+VITE_REVERB_APP_KEY="${REVERB_APP_KEY}"
+VITE_REVERB_HOST="${REVERB_HOST}"
+VITE_REVERB_PORT="${REVERB_PORT}"
+VITE_REVERB_SCHEME="${REVERB_SCHEME}"
