--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
         "react": "^19.0.0",
         "react-dom": "^19.0.0",
         "react-leaflet": "^5.0.0",
+        "react-router-dom": "^7.8.2",
         "recharts": "^2.15.4",
         "tailwind-merge": "^3.0.1",
         "tailwindcss": "^4.0.0",
