--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
         "concurrently": "^9.0.1",
         "file-saver": "^2.0.5",
         "globals": "^15.14.0",
+        "jspdf": "^3.0.2",
         "jszip": "^3.10.1",
         "laravel-vite-plugin": "^2.0",
         "leaflet": "^1.9.4",
