huge modifications in marche marketing service

--- a/.env
+++ b/.env
@@ -52,7 +52,8 @@ PUSHER_APP_ID=2036536
 PUSHER_APP_KEY=3f1a7f17780520f36a8a
 PUSHER_APP_SECRET=21dba64113ed0c00c12a
 PUSHER_APP_CLUSTER=eu
-QUEUE_CONNECTION=sync
+QUEUE_CONNECTION=database
+
 BROADCAST_DRIVER=pusher
 
 VITE_API_BASE_URL=http://127.0.0.1:8000
