--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "dependencies": {
         "@headlessui/react": "^2.2.0",
         "@inertiajs/react": "^2.0.0",
+        "@radix-ui/react-accordion": "^1.2.12",
         "@radix-ui/react-avatar": "^1.1.3",
         "@radix-ui/react-checkbox": "^1.1.4",
         "@radix-ui/react-collapsible": "^1.1.3",
@@ -49,7 +50,6 @@
         "@radix-ui/react-toggle": "^1.1.2",
         "@radix-ui/react-toggle-group": "^1.1.2",
         "@radix-ui/react-tooltip": "^1.1.8",
-        "@tailwindcss/vite": "^4.1.12",
         "@tailwindcss/vite": "^4.1.11",
         "@types/leaflet": "^1.9.20",
         "@types/react": "^19.0.3",
@@ -62,10 +62,12 @@
         "file-saver": "^2.0.5",
         "globals": "^15.14.0",
         "jszip": "^3.10.1",
+        "laravel-echo": "^2.2.0",
         "laravel-vite-plugin": "^2.0",
         "leaflet": "^1.9.4",
         "lucide-react": "^0.475.0",
         "papaparse": "^5.5.3",
+        "pusher-js": "^8.4.0",
         "react": "^19.0.0",
         "react-dom": "^19.0.0",
         "recharts": "^2.15.4",
