--- a/.env
+++ b/.env
@@ -26,7 +26,8 @@ DB_PORT=3306
 DB_DATABASE=betconsulting
 DB_USERNAME=root
 DB_PASSWORD=
-
+APP_TIMEZONE=Africa/Casablanca
+DB_TIMEZONE=+01:00
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
 SESSION_ENCRYPT=false
